--- a/extra/parity_exporter.service
+++ b/extra/parity_exporter.service
@@ -4,7 +4,7 @@ Wants=network.target
 After=network.target
 
 [Service]
-ExecStart=python3 /opt/parity_exporter/exporter.py
+ExecStart=/usr/bin/python3 /opt/parity_exporter/exporter.py
 Restart=always
 
 [Install]
